style.css
/* Base & Variables */

/* Colors  */
:root {
    /* --bg-color: */
    --primary-color: #002060;
    --secondary-color: #006B2B;
    --neutral-color: #F8F9FA;
    --text-color: #222;
    --primary-hover: #003080;
    --secondary-hover: #008235;
    --text-light: #757778;
    --card-bg: #fff;
    --border-color: #e5e7eb;

    /* Typography */
    --font-main: 'Inter', sans-serif;

    /* Spacing & Layout */
    --section-padding: 4rem 0;
    --container-width: 1100px;
    --transition-speed: 0.3s ease;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

body {
    background-color: var(--neutral-color);
    font-family: var(--font-main);
    color: var(--text-color);
    line-height: 1.6;
    transition: background-color var(--transition-speed), color var(--transition-speed);
}

.container {
    max-width: var(--container-width);
    width: 100%;
    margin: 0 auto;
    padding: 1.5rem;
}

ul {
    list-style: none;
}

a {
    text-decoration: none;
    color: inherit;
}

h1,
h2,
h3 {
    line-height: 1.2;
    font-weight: 700;
}

.btn {
    padding: 0.75rem 1.5rem;
    border-radius: 0.375rem;
    font-size: 1rem;
    font-weight: 500;
    text-align: center;
    cursor: pointer;
    border: none;
    transition: all var(--transition-speed);

}

.btn-primary {
    background-color: var(--primary-color);
    color: #fff;
}

.btn-primary:hover {
    background-color: var(--primary-hover);
    transform: translateY(-2px);
}

.btn-secondary {
    background-color: var(--secondary-color);
    color: #fff;
}

.btn-secondary:hover {
    background-color: var(--secondary-hover);
    transform: translateY(-2px);
}

/* Navigation */

header {
    background-color: var(--neutral-color);
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
    position: sticky;
    top: 0;
    z-index: 1000;
    transition: background-color var(--transition-speed);
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.nav-links {
    display: flex;
    gap: 3rem;
    font-weight: 500;
}

.nav-links a {
    position: relative;
    padding-bottom: 6px;
    transition: color var(--transition-speed);
}

.nav-links a:hover {
    color: var(--primary-hover);
}

.nav-links a.active {
    color: var(--secondary-color);
}

.logo a {
    color: var(--primary-color);
    font-size: 1.7rem;
    font-weight: bold;
}

.nav-actions {
    display: none;
}

.hamburger {
    background: none;
    border: none;
    cursor: pointer;
    font-size: 1.5rem;
    color: var(--primary-color);
    padding: 0.5rem;
    transition: color var(--transition-speed);
}

.hero-banner {
    width: 100%;
    height: 100%;
}

.hero-banner img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

/* Services */
.services {
    padding: var(--section-padding);
    background-color: var(--neutral-color);
    margin: 0 3rem;
}

.service-content h1 {
    padding-bottom: 1.5rem;
    font-size: 2.5rem;
    color: var(--primary-color);
}

.service-content p {
    font-weight: 500;
    font-size: 1.1rem;
    color: var(--text-light);
}

/* Cards */
.services-grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 3rem;
    margin-top: 6rem;
}

.service-card {
    background-color: var(--card-bg);
    height: 300px;
    border-radius: 0.375rem;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
    transition: all var(--transition-speed);
}

.service-card .icon {
    width: 50px;
    height: 50px;
    color: var(--primary-color);
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 2rem;
    font-size: 1.6rem;
    background-color: #e6e6e6;
    border-radius: 0.375rem;
    transition: all var(--transition-speed);
}

.service-card h3 {
    padding: 0.135rem 1rem;
    font-size: 1.4rem;
    color: var(--primary-color);
}

.service-card p {
    padding: 1rem;
    color: var(--text-light);
}

.service-card:hover .icon {
    background-color: var(--primary-color);
    color: var(--border-color);
}

.service-card:hover {
    transform: translateY(-5px);
}

/* Contact */
.contact-banner {
    height: 500px;
    background-color: #0047AB;
    border-radius: 0.375rem;
    padding: 4rem 0;
    background-image:
        linear-gradient(45deg, rgba(255, 255, 255, 0.05) 25%, transparent 25%),
        linear-gradient(-45deg, rgba(255, 255, 255, 0.05) 25%, transparent 25%),
        linear-gradient(45deg, transparent 75%, rgba(255, 255, 255, 0.05) 75%),
        linear-gradient(-45deg, transparent 75%, rgba(255, 255, 255, 0.05) 75%);
}

.contact-desc {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

.contact-desc h1 {
    font-size: 2.5rem;
    margin-bottom: 1.8rem;
    color: #fff;
}

.contact-desc p {
    max-width: 700px;
    font-size: 1.3rem;
    color: var(--border-color);
    text-align: center;
}

.contact-btn {
    background-color: var(--secondary-color);
    padding: 0.85rem 1.7rem;
    border-radius: 0.375rem;
    font-size: 1.3rem;
    font-weight: 600;
    border: none;
    margin-top: 2rem;
    color: var(--border-color);
    cursor: pointer;
    transition: background-color var(--transition-speed);
}

.contact-btn:hover {
    background-color: var(--secondary-hover);
}

.footer-content {
    padding: var(--section-padding);
    background-color: var(--neutral-color);
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.footer-logo {
    font-size: 1.2rem;
    color: var(--primary-color);
    font-weight: 700;
}

.footer-social {
    display: flex;
    gap: 2rem;
    font-size: 0.85rem;
    font-weight: 600;
    transition: color var(--transition-speed);
}

.footer-social a:hover {
    color: var(--secondary-hover);
}

/* Media Query */
/* Tablet */
@media (max-width: 900px) {
    .contact-banner {
        margin-top: 4rem;
    }

    .footer-content {
        flex-direction: column;
        gap: 2rem;
        text-align: center;
    }

    .footer-social {
        justify-content: center;
    }

    .nav-links {
        display: none;
    }

    .nav-actions {
        display: block;
    }

    .btn {
        display: none;
    }
}

/* Mobile  */
@media (max-width: 768px) {
    .nav-links {
        position: absolute;
        top: 70px;
        left: 0;
        right: 0;
        width: 100%;
        background-color: var(--neutral-color);
        display: none;
        flex-direction: column;
        gap: 0;
        padding: 1rem;
        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
        z-index: 999;
        list-style: none;
    }

    .nav-links.active {
        display: flex;
    }

    .nav-links li {
        width: 100%;
        border-bottom: 1px solid var(--border-color);
    }

    .nav-links li:last-child {
        border-bottom: none;
    }

    .nav-links a {
        display: block;
        padding: 1rem;
    }

    .hamburger:hover {
        color: var(--primary-hover);
    }

    .services {
        margin: 0 1rem;
        padding: 2rem 0;
    }

    .services-grid {
        grid-template-columns: 1fr;
        gap: 2rem;
        margin-top: 3rem;
    }

    .service-card {
        height: auto;
        min-height: 250px;
    }

    .contact-banner {
        height: auto;
        padding: 4rem 1rem;
    }

    .contact-desc h1 {
        font-size: 2rem;
    }

    .contact-desc p {
        font-size: 1.1rem;
    }

}

